--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "demo-ui"
+    }
+  },
+  "defaultProject": "demo-ui",
+  "cli": {
+    "packageManager": "yarn"
+  }
 }
